# Workspace-UCM-videojuegos

./: .gitignore
EDA/EjerciciosJuez/Tema0/EDAV-DupSecA/: CMakeLists.txt  EDAV-DupSecA.cpp
EDA/EjerciciosJuez/Tema0/EDAV-DupSecB/: CMakeLists.txt  EDAV-DupSecB.cpp
EDA/EjerciciosJuez/Tema0/EDAV-DupSecC/: CMakeLists.txt  EDAV-DupSecC.cpp
EDA/EjerciciosJuez/Tema0/EDAV-DuplicadorA-7/: CMakeLists.txt  EDAV-DuplicadorA-7.cpp
EDA/EjerciciosJuez/Tema0/EDAV-DuplicadorB-7/: CMakeLists.txt  EDAV-DuplicadorB-7.cpp
EDA/EjerciciosJuez/Tema0/EDAV-DuplicadorC/: CMakeLists.txt  EDAV-DuplicadorC.cpp
EDA/EjerciciosJuez/Tema1/EDAV-Anagramas-7/: CMakeLists.txt
EDA/EjerciciosJuez/Tema1/FAL-IT-Dalton-1/: CMakeLists.txt  FAL-IT-Dalton-1.cpp
EDA/EjerciciosJuez/Tema1/Tema1-2/: CMakeLists.txt  Tema1-2.cpp
EDA/EjerciciosJuez/Tema1/Tema1-3/: CMakeLists.txt  Tema1-3.cpp
EDA/EjerciciosJuez/Tema1/Tema1-4/: CMakeLists.txt  Tema1-4.cpp
EDA/EjerciciosJuez/Tema1/Tema1-5/: EDAV-Anagramas-7.cpp
EDA/EjerciciosJuez/Tema1/Tema1-6/: CMakeLists.txt  Tema1-6.cpp
EDA/EjerciciosJuez/Tema1/Tema1-7/: CMakeLists.txt  Tema1-7.cpp
EDA/EjerciciosJuez/Tema2/Tema2-01/: CMakeLists.txt  Tema2-1.cpp
EDA/EjerciciosJuez/Tema2/Tema2-02/: CMakeLists.txt  Tema2-02.cpp
EDA/EjerciciosJuez/Tema2/Tema2-03/: CMakeLists.txt  Tema2-03.cpp
EDA/EjerciciosJuez/Tema2/Tema2-04/: CMakeLists.txt  Tema2-04.cpp
EDA/EjerciciosJuez/Tema2/Tema2-05/: CMakeLists.txt  Tema2-05.cpp
EDA/EjerciciosJuez/Tema2/Tema2-06/: CMakeLists.txt  Tema2-06.cpp
EDA/EjerciciosJuez/Tema2/Tema2-07/: CMakeLists.txt  Tema2-07.cpp
EDA/EjerciciosJuez/Tema2/Tema2-08/: CMakeLists.txt  Tema2-08.cpp
EDA/EjerciciosJuez/Tema2/Tema2-09/: CMakeLists.txt  Tema2-09.cpp
EDA/EjerciciosJuez/Tema2/Tema2-10/: CMakeLists.txt  Tema2-10.cpp
EDA/EjerciciosJuez/Tema2/Tema2-11/: CMakeLists.txt  Tema2-11.cpp
EDA/EjerciciosJuez/Tema2/Tema2-12/: CMakeLists.txt  Tema2-12.cpp
EDA/EjerciciosJuez/Tema2/Tema2-13/: CMakeLists.txt  Tema2-13.cpp
EDA/EjerciciosJuez/Tema3/T3-01/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-02/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-03/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-04/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-05/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-06/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-07/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-08/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-09/: CMakeLists.txt  main.cpp
EDA/EjerciciosJuez/Tema3/T3-10/: CMakeLists.txt  main.cpp
EDA/Plantillas/: PlantillaJuezCentinela.cpp  PlantillaJuezNumeroCasos.cpp
EDA/Plantillas/Tema2/: PlantillaParcialmenteOrdenado.cpp
EDA/Plantillas/Tema3/: PlantillaCalderilla.cpp
EDA/Plantillas/Tema4/: Plantilla Inclusion.cpp
EDA/Plantillas/Tema5/: PlantillaCuela.cpp  PlantillaDuplica.cpp  T5PlantillaDuplicaPila.cpp  T5PlantillaRepetirElemsMult.cpp
EDA/Plantillas/Tema6/: PlantillaNodosHojasYAltura.cpp
EDA/Plantillas/Tema7/: PlantillaRefsCruzadas.cpp  T7PlantillaActorMasVisto.cpp  T7PlantillaActualizacionDiccionario.cpp  T7PlantillaConcursoProgramacion.cpp  T7PlantillaEligiendoDeporte.cpp
EDA/Plantillas/Tema8/: MainCarnetPuntos2.cpp  MainElecciones.cpp  Main_iPud.cpp
IG1/Plantilla/: CMakeLists.txt
IG1/Practica1/: CMakeLists.txt
IG1/Practica1/include/: Entity.h  Mesh.h  Scene.h
IG1/Practica1/src/: Entity.cpp  IG1App.cpp  Mesh.cpp  Scene.cpp
IG1/Practicas/: CMakeLists.txt  autores.txt
IG1/Practicas/src/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  IG1App.cpp  IG1App.h  Image.cpp  Image.h  IndexMesh.cpp  IndexMesh.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Scene0.cpp  Scene0.h  Scene1.cpp  Scene1.h  Scene2.cpp  Scene2.h  Scene3.cpp  Scene3.h  Scene4.cpp  Scene4.h  Scene5.cpp  Scene5.h  Scene6.cpp  Scene6.h  Scene7.cpp  Scene7.h  Scene8.cpp  Scene8.h  Shader.cpp  Texture.cpp  Texture.h
IG1/Practicas/src/Entities/: AdvancedTIE.cpp  AdvancedTIE.h  Box.cpp  Box.h  BoxOutline.cpp  BoxOutline.h  ColorMaterialEntity.cpp  ColorMaterialEntity.h  CompoundEntity.cpp  CompoundEntity.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Disk.cpp  Disk.h  Entity.cpp  Entity.h  EntityWithMaterial.cpp  EntityWithMaterial.h  EntityWithTexture.cpp  EntityWithTexture.h  GlassParapet.cpp  GlassParapet.h  Ground.cpp  Ground.h  IndexedBox.cpp  IndexedBox.h  Photo.cpp  Photo.h  RGBCube.cpp  RGBCube.h  RGBRectangle.cpp  RGBRectangle.h  RGBTriangle.cpp  RGBTriangle.h  RegularPolygon.cpp  RegularPolygon.h  SingleColorEntity.cpp  SingleColorEntity.h  (+10 more)
IG2/IG2App/: CMakeLists.txt  IG2App.cpp  IG2App.h  Main.cpp
IG2/IG2App/src/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Helix.cpp  Helix.h  Hero.cpp  Hero.h  IG2Object.cpp  IG2Object.h  Maze.cpp  Maze.h  Tile.cpp  Tile.h
MARP/: .gitignore
MARP/Plantillas/: 2.Centinela.cpp
MARP/Tema 1/Tema1-01/: CMakeLists.txt  Tema1-01.cpp
MARP/Tema 1/Tema1-02/: CMakeLists.txt  Tema1-02.cpp  TreeSet_AVL.h
MARP/Tema 2/Tema2-01/: CMakeLists.txt  Tema2-01.cpp
MARP/Tema 2/Tema2-02/: CMakeLists.txt  Tema2-02.cpp
MARP/Tema 2/Tema2-03/: CMakeLists.txt  Tema2-03.cpp
MARP/Tema 2/Tema2-04/: CMakeLists.txt  Tema2-04.cpp
MARP/Tema 2/Tema2-05/: CMakeLists.txt  Tema2-05.cpp
MARP/Tema 2/Tema2-L/: CMakeLists.txt  Tema2-L.cpp
MARP/Tema 3/Tema3-01/: CMakeLists.txt  Tema3-01.cpp
MARP/Tema 3/Tema3-02/: CMakeLists.txt  IndexPQ.h  Tema3-02.cpp
MARP/Tema 3/Tema3-03/: CMakeLists.txt  Tema3-03.cpp
MARP/Tema 3/Tema3-04/: CMakeLists.txt  Tema3-04.cpp
MARP/Tema 3/Tema3-L/: CMakeLists.txt  IndexPQ.h  Tema3-L.cpp
MARP/Tema 7/Tema7-01/: CMakeLists.txt  Dijkstra.h  DijkstraIndirecto.h  IndexPQ.h  main.cpp
PVLI/primera_web_MarcoGonzalez/: estilo.css  index.html  script.js
TPV1/PlantillaSDL/: CMakeLists.txt
TPV1/Tema3/: TPV1.lnk
TPV1/Tema3/Ejercicio1/: CMakeLists.txt
TPV1/Tema3/Ejercicio1/HolaSDL/: main.cpp
TPV1/Tema5/ejemploArquitectura/: Dog.cpp  Dog.h  main.cpp
TPV2/EjerciciosLaboratorio/: pair.h
TPV2/EjerciciosPrueba/: CMakeLists.txt  main.cpp  myvector.h
(+176 files in other folders)
